Fix gap on mobile

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-complete/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-complete/styles.scss
@@ -48,6 +48,7 @@
 			gap: 50px;
 			@media ( max-width: $break-medium ) {
 				width: 100%;
+				gap: 40px;
 			}
 
 			.domain-complete-summary {
